<resources>
    <string name="app_name">Quick Convert</string>
    <string name="AppName_String"><![CDATA[Number Conversion Encryption & Decryption]]></string>
    <string name="number_conversion_button"><![CDATA[Number Conversion]]></string>
    <string name="encryption_decryption_button"><![CDATA[Encryption & Decryption]]></string>
    <string name="number_conv">Number Conversion Types</string>
    <string name="B_D">Binary &amp; Decimal</string>
    <string name="B_H">Binary &amp; Hexadecimal</string>
    <string name="B_O">Binary &amp; Octal</string>
    <string name="D_H">Decimal &amp; Hexadecimal</string>
    <string name="D_O">Decimal &amp; Octal</string>
    <string name="H_O">Hexadecimal &amp; Octal</string>
    <string name="enter_number">enter number</string>
    <string name="answer">Answer</string>
    <string name="convert">Convert</string>
    <string name="binary">Binary</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="octal">Octal</string>
    <string name="Enter_The_Numer">Enter the number</string>
</resources>