<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Number_Conversion_Page">

    <!--<TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:text="@string/number_conv" />-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_conv"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="@font/basic"
        android:padding="5sp"
        />

    <Button
        android:id="@+id/bitode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/basic"
        android:padding="5dp"
        android:text="@string/B_D"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bitohex"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/basic"
        android:padding="5dp"
        android:text="@string/B_H"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bitootc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/basic"
        android:padding="5dp"
        android:text="@string/B_O"
        android:textSize="20sp" />

    <Button
        android:id="@+id/detohex"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/basic"
        android:padding="5dp"
        android:text="@string/D_H"
        android:textSize="20sp" />

    <Button
        android:id="@+id/detooct"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/basic"
        android:padding="5dp"
        android:text="@string/D_O"
        android:textSize="20sp" />

    <Button
        android:id="@+id/hextooct"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/basic"
        android:padding="5dp"
        android:text="@string/H_O"
        android:textSize="20sp" />

</LinearLayout>