<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="98dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="83dp"
        android:fontFamily="@font/basic"
        android:padding="5dp"
        android:text="@string/AppName_String"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/num_con_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        />

    <Button
        android:id="@+id/num_con_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/basic"
        android:padding="10dp"
        android:text="@string/number_conversion_button"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/encry_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/encry_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="252dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/basic"
        android:padding="10dp"
        android:text="@string/encryption_decryption_button"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_con_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>